--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ main {
 }
 
 .light {
-	background-color: rgb(218, 216, 212);
+	background-color: rgb(255, 255, 255);
 	color: #333 !important;
 }
 
@@ -95,6 +95,24 @@ a {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+}
+
+.box {
+	box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px,
+		rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
+		rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+	border: 1px solid rgba(25, 25, 25, 0.2);
+	padding: 0 20px 20px 20px;
+	border-radius: 20px;
+	overflow: scroll;
+}
+
+.box-title {
+	position: sticky;
+	top: 0px;
+	height: 20px;
+	background-color: inherit;
+	padding: 15px 0 10px 0;
 }
 
 @media (max-width: 600px) {
