--- a/src/components/notes/Notes.css
+++ b/src/components/notes/Notes.css
@@ -1,11 +1,37 @@
 .notes {
-	box-shadow: rgba(29, 32, 34, 0.84) 3px 3px 6px 0px inset,
-		rgba(255, 255, 255, 0.217) -3px -3px 6px 1px inset;
-	padding: 20px;
-	border-radius: 20px;
 	width: 300px;
 	height: 300px;
-	overflow: scroll;
+}
+
+.note-input {
+	height: 30px;
+	padding-left: 5px;
+	box-shadow: rgba(35, 35, 35, 0.84) 2px 2px 4px 0px inset,
+		rgba(237, 237, 237, 0.217) -2px -2px 4px 1px inset;
+	background-color: inherit;
+	color: inherit;
+	border: none;
+	border-radius: 5px;
+	overflow: visible;
+}
+
+.new-note {
+	margin-top: 8px;
+}
+
+.note {
+	margin-top: 10px;
+	border: 1px solid rgba(25, 25, 25, 0.2);
+	border-radius: 5px;
+}
+
+.sub-notes {
+	margin-top: 5px;
+	height: auto;
+	overflow: hidden;
+	border: 1px solid rgba(25, 25, 25, 0.2);
+	border-radius: 5px;
+	background-color: inherit;
 }
 
 @media (max-width: 600px) {
